@@ -1,3 +1,14 @@
+2000-06-14  Paul D. Smith  <psmith@gnu.org>
+
+	* acinclude.m4 (pds_WITH_GETTEXT): rewrite fp_WITH_GETTEXT and
+	rename it to avoid confusion.  This version is very specific: it
+	won't accept any gettext that isn't GNU.  If the user doesn't
+	explicitly ask for the included gettext, we look to see if the
+	system gettext is GNU (testing both the actual libintl library,
+	and the libintl.h header file).  Only if the system gettext is
+	really GNU gettext will we allow it to be used.
+	(pds_CHECK_SYSTEM_GETTEXT): A helper function.
+
 2000-06-13  Paul D. Smith  <psmith@gnu.org>
 
 	* gettext.h: If we have libintl.h, use that instead of any of the
